- Update the trust-db filter rules to add and drop some things
- Add new magic detections and drop a lot of old rules
- Performance improvement looking up mime-types
- Various code cleanups, hardening, and performance optimizing
- Classify ELF files with an unknown interpreter as application/x-bad-elf
- Consolidate the fapolicyd-cli return codes

1.4.2
- Correct identification of kworker threads
- Fix various threading, initialization, and function attribute issues
- Add support for SHA512, replace SHA256HASH with FILE_HASH
- Add --filter option to fapolicyd-cli --file
- Update bash completions for new options
- Add an early subject cache evictions counter to the state report
- Add CPU cores to the state report
- Move mounts update to it's own thread to prevent deadlocks with LUKS
- Add db_max_size = auto support so db size is managed by the daemon
- In rpm backend, drop any file from trustdb that doesn't verify size or hash

1.4.1
- Fix deadlock on reconfigure
- On reconfigure, update the trust list and reload the rpm filter

1.4
- Add ignore_mounts option to fapolicyd to not watch some mount points
- add --check-ignore_mounts option to fapolicyd-cli
- Fix overlay filesystem detection in fapolicyd-cli --check-watch_fs
- Fix fapolicyd-cli --check-path so that it properly detects symlinked dirs
- In fapolicyd-cli, add --verbose flag to --check-ignore_mounts
- Watch the /run partition
- Update some config items in SIGHUP
- Clarify warnings for fapolicyd-cli --check-trustdb
- All trust source backend checks/updates performance improvement
- Fix line too long error when last line of conf file had no newline

1.3.7
- Refactor queue to unify enqueue and dequeue and make it lockless
- Improve text/x-shellscript detection
- Fix bug in fapolicyd-cli --ftype detection which was introduced in 1.3.6
- Add watched mount points to state report - important since they can change
- Warn when object cache eviction ratios are high