@@ -29,5 +29,6 @@
 
 int load_daemon_config(conf_t *config);
 void free_daemon_config(conf_t *config);
+const char *lookup_integrity(unsigned value);
 
 #endif
